NetBSD Problem Report #54669

From martin@aprisoft.de  Fri Nov  1 12:20:33 2019
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C58DA7A240
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  1 Nov 2019 12:20:33 +0000 (UTC)
Message-Id: <20191101122024.6DC105CC879@emmas.aprisoft.de>
Date: Fri,  1 Nov 2019 13:20:24 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: uvm kernel assertion failure trying to run netbsd32 binaries
X-Send-Pr-Version: 3.95

>Number:         54669
>Category:       kern
>Synopsis:       uvm kernel assertion failure trying to run netbsd32 binaries
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 01 12:25:00 +0000 2019
>Closed-Date:    Fri Nov 01 20:03:01 +0000 2019
>Last-Modified:  Fri Nov 01 20:03:01 +0000 2019
>Originator:     Martin Husemann
>Release:        NetBSD 9.99.17
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD whoever-brings-the-night.aprisoft.de 9.99.17 NetBSD 9.99.17 (WHOEVER) #317: Mon Oct 14 08:53:36 CEST 2019 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/sparc64/compile/WHOEVER sparc64
Architecture: sparc64
Machine: sparc64
>Description:

Trying to boot with sparc userland on a sparc64 machine with todays kernel
fails:

[   7.2600149] kern.module.path=/stand/sparc64/9.99.17/modules
[   7.4300199] panic: kernel diagnostic assertion "powerof2(align)" failed: file "../../../../uvm/uvm_map.c", line 196 
Window 1 frame64 0x1779f7370 locals, ins:
0 1468ef8 1779f7c98 1467ca0 1467c00 1022ccf60 1343000 5
1322348 1322338 13442b0 1344178 c4 0 1779f6c31=sp 119f534=pc:netbsd:uvm_map_find
space+0x894
Window 2 frame64 0x1779f7430 locals, ins:
0 6 0 4040000 1322000 135fc00 1360048 101d48588
101d94048 5 4000 1779f7678 0 ffffffffffffffff 1779f6d11=sp 119f988=pc:netbsd:uvm
_map_prepare+0x208
Window 3 frame64 0x1779f7510 locals, ins:
0 1469498 1467c00 4040000 0 0 0 0
101d94048 0 4000 0 ffffffffffffffff 6 1779f6df1=sp 11a286c=pc:netbsd:uvm_map+0x1
2c
Window 4 frame64 0x1779f75f0 locals, ins:
c 4040000 1779f76b0 101d92940 4000000 0 0 0
101d94048 1779f77a8 4000 0 ffffffffffffffff 6 1779f6ee1=sp 11ab040=pc:netbsd:uvm
_pagermapin+0xa0
Window 5 frame64 0x1779f76e0 locals, ins:
4000 1022cb1c0 1022cad80 1345d60 3 1469598 1345d30 4440000
1779f7940 2 1 14695b0 14695a8 6 1779f6fb1=sp 1298c5c=pc:netbsd:genfs_getpages+0x
e3c        
Window 6 frame64 0x1779f77b0 locals, ins:
2 10 ffffffffffffffff c000 1 1779f7940 1024c8848 1022ccf60
1779f7a38 1779f7940 4000 0 2000 4000 1779f7181=sp 129616c=pc:netbsd:VOP_GETPAGES
+0x4c      
Window 7 frame64 0x1779f7980 locals, ins:
0 1022ccf60 0 2 13251e8 0 0 0
1022ccf60 e000 1779f7b80 1779f7b74 0 4 1779f7271=sp 1199360=pc:netbsd:uvm_fault_
internal+0x1560
Window 8 frame64 0x1779f7a70 locals, ins:
0 1467c90 0 1467ca0 1467c00 1022ccf60 1343000 5
6 13430e0 1 0 1779f7c70 2 1779f74f1=sp 102e234=pc:netbsd:text_access_fault+0x74
Window 9 frame64 0x1779f7cf0 locals, ins:
1022fa1b0 1467c90 1779f7c98 1467ca0 1467c00 1022ccf60 1343000 5
1779f7ed0 64 2003f7d4 1 2003e000 1022cad80 1779f7621=sp 1008904=pc:1008904



>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/54669: uvm kernel assertion failure trying to run netbsd32
 binaries
Date: Fri, 1 Nov 2019 13:36:03 +0100

 On Fri, Nov 01, 2019 at 12:25:01PM +0000, martin@NetBSD.org wrote:
 > [   7.2600149] kern.module.path=/stand/sparc64/9.99.17/modules
 > [   7.4300199] panic: kernel diagnostic assertion "powerof2(align)" failed: file "../../../../uvm/uvm_map.c", line 196 

 I made it a KASSERTMSG and got:

 [   7.5700147] panic: kernel diagnostic assertion "powerof2(align)" failed: file "../../../../uvm/uvm_map.c", line 196 align = 6

 Martin

From: "Rin Okuyama" <rin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54669 CVS commit: src/sys/uvm
Date: Fri, 1 Nov 2019 13:04:23 +0000

 Module Name:	src
 Committed By:	rin
 Date:		Fri Nov  1 13:04:23 UTC 2019

 Modified Files:
 	src/sys/uvm: uvm_map.c

 Log Message:
 Fix previous; semantics of align argument of uvm_map() is different
 when UVM_FLAG_COLORMATCH is specified.

 Should fix PR kern/54669.


 To generate a diff of this commit:
 cvs rdiff -u -r1.365 -r1.366 src/sys/uvm/uvm_map.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: rin@NetBSD.org
State-Changed-When: Fri, 01 Nov 2019 13:05:46 +0000
State-Changed-Why:
Sorry for breakage. Can you test uvm_map.c,v 1.366 ?


From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: PR/54669 CVS commit: src/sys/uvm
Date: Fri, 1 Nov 2019 16:54:19 +0100

 This works, thanks for the quick fix!

 Martin

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54669 CVS commit: [netbsd-9] src/sys/uvm
Date: Fri, 1 Nov 2019 18:24:31 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Nov  1 18:24:31 UTC 2019

 Modified Files:
 	src/sys/uvm [netbsd-9]: uvm_map.c

 Log Message:
 Addionally pull up the following revision for ticket #388:

 	sys/uvm/uvm_map.c			1.366

 Fix previous; semantics of align argument of uvm_map() is different
 when UVM_FLAG_COLORMATCH is specified.

 Should fix PR kern/54669.


 To generate a diff of this commit:
 cvs rdiff -u -r1.362.2.1 -r1.362.2.2 src/sys/uvm/uvm_map.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: rin@NetBSD.org
State-Changed-When: Fri, 01 Nov 2019 20:03:01 +0000
State-Changed-Why:
Thank you for confirmation and pulling up to netbsd-9.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.