Fix previous; semantics of align argument of uvm_map() is different when UVM_FLAG_COLORMATCH is specified.

Should fix PR kern/54669.